# Nabbahni

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  README.md  SentinelleRx-v2.pptx  SentinelleRx.pptx  build_pptx.py  docker-compose.yml  nabbahni-pitch-deck.html  pitch-deck-robot.html  pitch-deck.html  requirements-local.txt  run.bat  setup.bat  stop.bat
.github/workflows/: backend-ci.yml  deploy.yml  docker-build.yml  frontend-ci.yml  ml-ci.yml  security-scan.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  admin.py  alerts.py  auth.py  citizen.py  expiry.py  forecasts.py  health.py  medications.py  pharmacies.py  recommendations.py  sales.py  shortages.py  stock.py
backend/app/core/: audit.py  cache.py  config.py  database.py  dbtypes.py  enums.py  messaging.py  observability.py  security.py
backend/app/etl/: __init__.py  validators.py
backend/app/models/: __init__.py  decision.py  ml.py  ops.py  reference.py  transactional.py
backend/app/schemas/: common.py  entities.py  expiry.py
backend/app/services/: availability.py  demand.py  expiry.py  labels.py  recommendations.py  substitution.py
backend/app/tools/: dev_token.py  export_openapi.py
backend/app/workers/: alert_worker.py
backend/tests/: conftest.py  test_expiry.py  test_health_and_auth.py  test_services.py
data-generator/: pyproject.toml
data-generator/generator/: __init__.py  geo.py  reference_data.py  seed.py  simulate.py
docs/api/: README.md
docs/architecture/: ai-architecture.md  data-flow.md  deployment.md  system-overview.md
docs/database/: ERD.md
docs/roadmap/: launch-strategy.md  mvp-roadmap.md  production-roadmap.md
docs/security/: gdpr-compliance.md  owasp-mapping.md  rbac-matrix.md
frontend/: .env.local.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/messages/: ar.json  fr.json
frontend/src/: auth.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: app-shell.tsx  citizen-header.tsx  ui.tsx  (+5 more)
infra/keycloak/: realm-export.json
infra/monitoring/: alert-rules.yml  alertmanager.yml  otel-collector.yaml  prometheus.yml
ml/: Dockerfile  pyproject.toml
ml/artifacts/: README.md  shortage.joblib
ml/ml/: __init__.py  config.py  data.py  evaluation.py  explain.py  features.py  registry.py  score.py  shortage.py  train_all.py
ml/ml/training/: demand.py
ml/tests/: test_features_and_shortage.py
scripts/: demo.sh
scripts/win/: api.bat  env.bat  web.bat
(+39 files in other folders)
