[project]
name = "sentinellerx-backend"
version = "0.1.0"
description = "SentinelleRx API — national medication shortage prediction platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0.36",
    "geoalchemy2>=0.15",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "redis>=5.2",
    "pika>=1.3",
    "shapely>=2.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "sentry-sdk>=2.18",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
