[project]
name = "sentinellerx-ml"
version = "0.1.0"
description = "SentinelleRx ML — demand forecasting, shortage prediction, explainability"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "prophet>=1.1.5",
    "shap>=0.46",
    "mlflow>=2.16",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "geoalchemy2>=0.15",
    "pydantic-settings>=2.6",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.7"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
